軽微な修正
altをtitleに
パーミッションの修正

--- a/imagehunter/popup.html
+++ b/imagehunter/popup.html
@@ -96,6 +96,7 @@ h1{
 
 </style>
 <meta charset="utf-8">
+<meta name="referrer" content="no-referrer">
     <script src="exif.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
