--- a/imagehunter/popup.html
+++ b/imagehunter/popup.html
@@ -96,12 +96,14 @@ h1{
 
 </style>
 <meta charset="utf-8">
-<meta name="referrer" content="no-referrer">
     <script src="exif.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
-<div class="caption">画像一覧</div>
+    
+<div class="caption">画像一覧
+<button type="refresh" id="reload"><img src="refresh.png" alt="button" width="15" height="15" /></button>
+</div>
 <div id="imgs" class="box"></div>
 </body>
 </html>
