--- a/hiddensearch/popup.html
+++ b/hiddensearch/popup.html
@@ -24,6 +24,48 @@
             padding: 20px;
         }
     </style>
+<style>
+    .error-message {
+        color: #d32f2f;
+        background-color: #fde0e0;
+        padding: 12px;
+        border-radius: 4px;
+        margin: 10px 0;
+        text-align: center;
+    }
+    #reload-button {
+        background-color: #1976d2;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        padding: 6px 12px;
+        cursor: pointer;
+        margin-top: 8px;
+    }
+    #reload-button:hover {
+        background-color: #1565c0;
+    }
+    .loading {
+    padding: 20px;
+    text-align: center;
+    color: #666;
+}
+.highlight {
+    background-color: #ffeb3b;
+    padding: 0 2px;
+    border-radius: 2px;
+}
+.result-item {
+    margin: 10px 0;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+.result-item small {
+    display: block;
+    margin-top: 5px;
+    color: #666;
+}
+</style>
 </head>
 <body>
     <h2>検出結果</h2>
